; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_3913.c_getbuf.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_3913.c_getbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"getbuf(): allocating memory failed.\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"GET http://\00", align 1
@x86_bind = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getbuf(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @BUFSIZE, align 4
  %5 = add nsw i32 %4, 1
  %6 = call i64 @malloc(i32 %5)
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 @printe(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 1)
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* @BUFSIZE, align 4
  %14 = call i32 @memset(i8* %12, i8 signext 0, i32 %13)
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @memcpy(i8* %15, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 11)
  %17 = load i8*, i8** %3, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 11
  %19 = call i32 @memset(i8* %18, i8 signext -112, i32 250)
  %20 = load i8*, i8** %3, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 261
  store i8 -21, i8* %21, align 1
  %22 = load i8*, i8** %3, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 262
  store i8 4, i8* %23, align 1
  %24 = load i32, i32* %2, align 4
  %25 = zext i32 %24 to i64
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 263
  %28 = bitcast i8* %27 to i64*
  store i64 %25, i64* %28, align 8
  %29 = load i8*, i8** %3, align 8
  %30 = getelementptr inbounds i8, i8* %29, i64 11
  %31 = getelementptr inbounds i8, i8* %30, i64 250
  %32 = getelementptr inbounds i8, i8* %31, i64 4
  %33 = getelementptr inbounds i8, i8* %32, i64 2
  %34 = call i32 @memset(i8* %33, i8 signext -112, i32 32)
  %35 = load i8*, i8** %3, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 11
  %37 = getelementptr inbounds i8, i8* %36, i64 250
  %38 = getelementptr inbounds i8, i8* %37, i64 4
  %39 = getelementptr inbounds i8, i8* %38, i64 2
  %40 = getelementptr inbounds i8, i8* %39, i64 32
  %41 = load i8*, i8** @x86_bind, align 8
  %42 = load i8*, i8** @x86_bind, align 8
  %43 = call i32 @strlen(i8* %42)
  %44 = call i32 @memcpy(i8* %40, i8* %41, i32 %43)
  %45 = load i8*, i8** %3, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 11
  %47 = getelementptr inbounds i8, i8* %46, i64 250
  %48 = getelementptr inbounds i8, i8* %47, i64 4
  %49 = getelementptr inbounds i8, i8* %48, i64 2
  %50 = getelementptr inbounds i8, i8* %49, i64 32
  %51 = load i8*, i8** @x86_bind, align 8
  %52 = call i32 @strlen(i8* %51)
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %50, i64 %53
  %55 = call i32 @memset(i8* %54, i8 signext 47, i32 1)
  %56 = load i8*, i8** %3, align 8
  %57 = getelementptr inbounds i8, i8* %56, i64 11
  %58 = getelementptr inbounds i8, i8* %57, i64 250
  %59 = getelementptr inbounds i8, i8* %58, i64 4
  %60 = getelementptr inbounds i8, i8* %59, i64 2
  %61 = getelementptr inbounds i8, i8* %60, i64 32
  %62 = load i8*, i8** @x86_bind, align 8
  %63 = call i32 @strlen(i8* %62)
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds i8, i8* %61, i64 %64
  %66 = getelementptr inbounds i8, i8* %65, i64 1
  %67 = call i32 @memset(i8* %66, i8 signext 10, i32 2)
  %68 = load i8*, i8** %3, align 8
  ret i8* %68
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @printe(i8*, i32) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
